# ros-humble-xarm

./: Dockerfile  README.md  avatar_entrypoint.bash  avatar_entrypoint.sh  start.bash
avatar_challenge/: package.xml
avatar_challenge/launch/: start.launch.py
