<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avatar_challenge</name>
  <version>0.0.1</version>
  <description>Avatar Challenge</description>
  <maintainer email="youremail@domain.com">Your Name</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xarm_moveit_config</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
